ui:prevent project images from cutting on small screens

--- a/style.css
+++ b/style.css
@@ -347,7 +347,6 @@ section h2::after {
 .project-image img{
     width: 100%;
     height: 100%;
-    object-fit: cover;
 }
 
 .project-image::before {
